data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1972.wast
;; 3. **Test 3: Conditional Branch in Exported Function**    - **Description**: Define a WASM module that exports a function containing a `br_if` instruction within a block structure. Call this exported function from another module and ensure the conditionally controlled exit from the block is appropriately processed across boundary transitions.

(assert_invalid
  (module
    (func $exported_function
      (block (br_if 0 (i32.const 0)))
    )
    (export "exported_function" (func $exported_function))
  )
  "type mismatch"
)